# jdplus-main-python-version-upgrade

./: CHANGELOG.md  CLAUDE.md  JDPLUS_MAIN_README.md  LICENSE  README.md  TEST_SUMMARY.md  __init__.py  pyproject.toml  python_major_version_upgrade.md  setup.py
benchmarks/: __init__.py  benchmark_core.py  benchmark_sa.py
docs/: api_reference.md  user_guide.md
docs/examples/: advanced_features.py  basic_sa.py  batch_processing.py  custom_calendars.py  visualization_examples.py
jdemetra_py/io/: __init__.py  formats.py  providers.py
jdemetra_py/optimization/: __init__.py  caching.py  numba_extensions.py  vectorization.py
jdemetra_py/sa/: __init__.py
jdemetra_py/sa/base/: __init__.py  definition.py  estimation.py  processor.py  results.py  specification.py
jdemetra_py/sa/benchmarking/: __init__.py  base.py  cholette.py  denton.py
jdemetra_py/sa/diagnostics/: __init__.py  quality.py  residuals.py  seasonality.py
jdemetra_py/sa/tramoseats/: __init__.py  processor.py  seats.py  specification.py  tramo.py
jdemetra_py/sa/x13/: __init__.py  specification.py  x13.py
jdemetra_py/toolkit/: __init__.py
jdemetra_py/toolkit/arima/: __init__.py  estimation.py  forecasting.py  models.py
jdemetra_py/toolkit/calendars/: __init__.py  calendar.py  easter.py  holidays.py  utilities.py
jdemetra_py/toolkit/math/: __init__.py  linearalgebra.py  matrices.py  polynomials.py
jdemetra_py/toolkit/regression/: __init__.py  calendar.py  variables.py
jdemetra_py/toolkit/ssf/: __init__.py  components.py  kalman.py  statespace.py
jdemetra_py/toolkit/stats/: __init__.py  descriptive.py  distributions.py  tests.py
jdemetra_py/toolkit/timeseries/: __init__.py  data.py  domain.py  frequency.py
jdemetra_py/visualization/: __init__.py  charts.py  plots.py  styles.py
jdemetra_py/workspace/: __init__.py  persistence.py  workspace.py
tests/: __init__.py  conftest.py  test_arima.py  test_math.py  test_sa.py  test_stats.py  test_timeseries.py
